@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: m_kline.c,v 1.49 1999/08/01 06:47:20 tomh Exp $
+ *   $Id: m_kline.c,v 1.50 1999/08/10 02:46:24 lusky Exp $
  */
 #include "m_kline.h"
 #include "channel.h"
@@ -568,6 +568,29 @@ m_kline(aClient *cptr,
       if(*argv)
         reason = argv;
     }
+
+  /*
+   * Check for # in user@host
+   */
+
+  if(strchr(host, '#'))
+    {
+#ifdef SLAVE_SERVERS
+      if(!IsServer(sptr))
+#endif
+        sendto_one(sptr, ":%s NOTICE %s :Invalid character '#' in hostname",
+                   me.name, parv[0]);
+      return 0;
+    }
+  if(strchr(user, '#'))
+    { 
+#ifdef SLAVE_SERVERS
+      if(!IsServer(sptr))
+#endif  
+        sendto_one(sptr, ":%s NOTICE %s :Invalid character '#' in username",
+                   me.name, parv[0]);
+      return 0;
+    }   
 
   /*
    * Now we must check the user and host to make sure there
