@@ -1,3 +1,12 @@
+*** 19990904_1 by lusky
+major fixes to dbuf code (th)
+bumped patchlevel to b103
+
+
+*** 19990902_1 by lusky
+added check for '#' in username and hostname of /quote kline
+
+
 *** 19990831_1 by lusky
 bumped patchlevel to b102
 left over aconf->user gets freed twice, causing some malloc packages to leave their lunch all over the disk.... NULL things after every free (db)
